--- a/crawling news titles.ipynb
+++ b/crawling news titles.ipynb
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('/news/breaknews/1/0#breaknews', '精選1'), ('/news/breaknews/1/99#breaknews', '不分類'), ('/news/breaknews/1/1#breaknews', '要聞'), ('/news/breaknews/1/8#breaknews', '娛樂'), ('/news/breaknews/1/2#breaknews', '社會'), ('/news/breaknews/1/3#breaknews', '地方'), ('/news/breaknews/1/5#breaknews', '國際'), ('/news/breaknews/1/4#breaknews', '兩岸'), ('/news/breaknews/1/6#breaknews', '財經'), ('/news/breaknews/1/11#breaknews', '股市'), ('/news/breaknews/1/7#breaknews', '運動'), ('/news/breaknews/1/9#breaknews', '生活'), ('/news/breaknews/1/13#breaknews', '數位'), ('/news/breaknews/1/12#breaknews', '文教')]\n"
+      "[('/news/breaknews/1/0#breaknews', '精選'), ('/news/breaknews/1/99#breaknews', '不分類'), ('/news/breaknews/1/1#breaknews', '要聞'), ('/news/breaknews/1/8#breaknews', '娛樂'), ('/news/breaknews/1/2#breaknews', '社會'), ('/news/breaknews/1/3#breaknews', '地方'), ('/news/breaknews/1/5#breaknews', '國際'), ('/news/breaknews/1/4#breaknews', '兩岸'), ('/news/breaknews/1/6#breaknews', '財經'), ('/news/breaknews/1/11#breaknews', '股市'), ('/news/breaknews/1/7#breaknews', '運動'), ('/news/breaknews/1/9#breaknews', '生活'), ('/news/breaknews/1/13#breaknews', '數位'), ('/news/breaknews/1/12#breaknews', '文教')]\n"
      ]
     }
    ],
